# Sandbox

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_INTEGRATE_EXISTING_CODE.md  INFRASTRUCTURE.md  PLAN.md  README.md  deep-research-report.md  framework.yaml  next_steps.md  pyproject.toml
branch/: README.md  framework.yaml  pyproject.toml
branch/docs/planning/: current_state.md  feature_plan.md  next_steps.md
branch/feature_schemas/: user.yaml
branch/gcp_ml_framework/: __init__.py  config.py  context.py  naming.py
branch/gcp_ml_framework/cli/: cmd_deploy.py  cmd_init.py  cmd_run.py  cmd_teardown.py
branch/gcp_ml_framework/dag/: operators.py
branch/gcp_ml_framework/pipeline/: builder.py  runner.py
branch/gcp_ml_framework/secrets/: client.py
branch/gcp_ml_framework/utils/: bq.py  logging.py  sql_compat.py
branch/pipelines/churn_prediction/: cloudbuild.yaml  pipeline.py
branch/pipelines/churn_prediction_new/: cloudbuild.yaml  config.yaml  pipeline.py  pipeline.py_old
branch/pipelines/example_churn/: pipeline.py
branch/tests/: conftest.py
branch/tests/unit/: test_config.py  test_dag_builder.py  test_dag_tasks.py  test_secrets.py
docker/base/base-ml/: Dockerfile
docker/base/base-python/: Dockerfile
docker/base/component-base/: Dockerfile
docs/: demo.md  gcp_run_log.md  understanding.md
docs/architecture/: plan.md
docs/guides/: integration.md  quickstart.md
docs/planning/: current_gaps.md  current_state.md  next_steps.md  project_guideline.md
docs/prerequisite/: infrastructure.md
feature_schemas/: item.yaml  user.yaml
gcp_ml_framework/: config.py  context.py  naming.py
gcp_ml_framework/cli/: _helpers.py  cmd_compile.py  cmd_context.py  cmd_deploy.py  cmd_init.py  cmd_promote.py  cmd_run.py  cmd_teardown.py  main.py
gcp_ml_framework/components/: base.py
gcp_ml_framework/components/feature_store/: __init__.py  write_features.py
gcp_ml_framework/components/ml/: train.py  (+5 more)
gcp_ml_framework/dag/: builder.py  compiler.py  factory.py  operators.py  runner.py
gcp_ml_framework/feature_store/: client.py  schema.py
gcp_ml_framework/pipeline/: __init__.py  builder.py  compiler.py  runner.py
gcp_ml_framework/secrets/: __init__.py  client.py
gcp_ml_framework/utils/: ar.py  bq.py  gcs.py  sql_compat.py
pipelines/churn_prediction/: config.yaml  pipeline.py
pipelines/daily_sales_etl/: dag.py
pipelines/example_churn/: pipeline.py
pipelines/reco_features/: pipeline.py
pipelines/reco_training/: pipeline.py
pipelines/recommendation_engine/: config.yaml  dag.py
pipelines/sales_analytics/: config.yaml  dag.py
pipelines/training_pipeline/: pipeline.py
scripts/: bootstrap.sh  docker_build.sh  seed_bq.sh
second_run/: estimator.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_cli.py  test_component_base_image.py  test_components.py  test_composer_runner.py  test_config.py  test_context.py  test_dag_compiler.py  test_dag_tasks.py  test_feature_schema.py  test_naming.py  test_phase1.py  test_phase2.py  test_phase3.py  test_pipeline_builder.py  test_secrets.py  test_sql_compat.py
(+91 files in other folders)
