[project]
name = "second-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kfp>=2.15,<3",
    "google-cloud-aiplatform>=1.136",
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-cloud-secret-manager>=2.21",
    "apache-airflow>=2.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "typer>=0.15",
    "rich>=13",
    "pyyaml>=6",
    "duckdb>=1.1",
    "pyarrow>=18",
    "pandas>=2.2",
    "apache-airflow-providers-google>=20.0",    
]

training_pipeline = [
    "loguru>=0.7.3",
    "typer>=0.24.1",
]

[project.scripts]
gml = "gcp_ml_framework.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"